--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,9 @@
-/*body*/
-
+/*
+-----------------FUENTES---------------
+font-family: 'Montserrat', sans-serif;
+font-family: 'Source Sans 3', sans-serif;
+*/
+/*INDEX*/
 * {
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
@@ -13,8 +17,8 @@ a{
 	color: #000;
 }
 body {
-font-family: "Montserrat", sans-serif;
-background-color: #0D0D0D;
+    background-color: #0D0D0D;
+	font-family: 'Montserrat', sans-serif;
 }
 header{
 	width: 100%;
@@ -22,7 +26,7 @@ header{
 	top: 0;
 }
 .titInicialMinimal {
-font-style: italic; 
+	font-style: italic; 
 text-align: center;
 color: #fff;
 margin: 10px;
@@ -30,7 +34,7 @@ margin: 10px;
 .containerAnimacion{
 	display: flex;
 	justify-content: center;
-	align-items:center;
+	align-items:center
 }
 .agrandar{
 	animation-name: agrandar;
@@ -49,15 +53,6 @@ margin: 10px;
 }
 
 
-
-
-/*BARRA DE NAVEGACION*/
-.navegacion{
-	width: 1000px;
-	margin: 20px auto;
-	background: #0D0D0D;
-	
-}
 /*BARRA DE NAVEGACION*/
 .navegacion{
 	width: 1000px;
@@ -91,6 +86,7 @@ margin: 10px;
 .navMenu{
 	display: flex;
 }
+
 /* SUBMENU*/
 .submenu{
 	position: absolute;
@@ -114,7 +110,10 @@ margin: 10px;
 	opacity: 1;
 }
 
-/*banner y footer no hechos en sass*/
+
+
+
+
 /*BANNER*/
 
 .banner{
@@ -156,19 +155,19 @@ margin: 10px;
 }
 
 /*FOOTER*/
-#footer {
+.footer {
 	margin-top: 80px;
 	padding: 20px 0 0 0;
 	text-align: center;
 	color: #fff;
 }
-#footer {
+.footer {
 	background: #262626;
 }
-#footer a{
+.footer a{
 	color: #fff;
 }
-#footer a:hover{
+.footer a:hover{
 	color: #585858;
 }
 .footerImg{
@@ -200,6 +199,7 @@ margin: 10px;
 	background-size: cover;
 	background-position: center;
 }
+
 /*FIN NOSOTROS*/
 
 /*CONTACTO*/
@@ -239,3 +239,146 @@ input[type="submit"] {
 
 
 /*FIN CONTACTO*/
+
+/*TIENDA*/
+.Grid-tienda{}
+.clearfix:before,
+.clearfix:after {
+    content: " ";
+    display: table;
+}
+
+.clearfix:after {
+    clear: both;
+}
+
+.card {
+background-color: #fff;
+border-radius: 2px;
+box-shadow: -1px 2px 4px rgba(0,0,0,.25), 1px 1px 3px rgba(0,0,0,.1);
+margin: 0 auto;
+max-width: 340px;
+}
+
+.card-media {
+width: 100%;
+}
+
+.card-details {
+padding: 5px 15px;
+}
+
+.card-head {
+font-weight: 400;
+}
+
+.card-head {
+font-size: 26px;
+margin-bottom: 15px;
+}
+
+.card-action-button {
+border-radius: 2px;
+color: #FFAB40;
+cursor: pointer;
+display: inline-block;
+font-weight: 500;
+margin: 0;
+padding: 10px;
+text-decoration: none;
+}
+
+.card-action-button:hover {
+background-color: rgba(255 ,168 ,58, .2);
+}
+
+
+
+/*FIN TIENDA*/
+
+/* USTEDES*/
+*{
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
+
+
+.headerUstedes { grid-area: header;
+background-color: red;
+height: 24vh;
+}
+
+.seccion1{ grid-area: section1;
+background-color: rebeccapurple;
+height: 26,1vh;
+}
+
+.seccion2 { grid-area: section2;
+background-color: royalblue;
+height: 26,1vh;
+}
+
+.seccion3 { grid-area: section3;
+background-color: wheat;
+height: 25,1vh;
+}
+
+.seccion4 { grid-area: section4;
+background-color: orange;
+height: 25,1vh;
+}
+
+.footerUstedes { grid-area: footer; 
+background-color: greenyellow;
+height: 25vh;
+} 
+.Grid-Ustedes{
+	display: grid
+	
+
+}
+
+.h1Ustedes{
+	font-size: none;
+	color: #fff;
+}
+.h2Ustedes{
+	font-size: none;
+	color: #fff;
+}
+.sectionUstedesImg1{
+	width: 10%;
+
+}
+.sectionUstedesImg2{
+	width: 10%;
+
+}
+.sectionUstedesImg3{
+	width: 10%;
+
+}
+.sectionUstedesImg4{
+	width: 10%;
+
+}
+.sectionUstedesImg5{
+	width: 10%;
+
+}
+.sectionUstedesImg6{
+	width: 10%;
+
+}
+
+
+@media (max-width: 420px) {
+	.container {
+		grid-template-areas:"header header header header""header header header header""section1 section1 section1 section1""section2 section2 section2 section2""section3 section3 section3 section3""section4 section4 section4 section4""footer footer footer footer""footer footer footer footer";
+	}
+}
+
+
+
+/*  FIN USTEDES*/   
