se agregan imagenes a carpeta img y se agrega colores al sass correspondiente

--- a/scss/_colores.scss
+++ b/scss/_colores.scss
@@ -8,6 +8,7 @@ $negro2: #262626;
 $gris: #585858;
 $gris1: #595959;
 $rojo:  #f11d0e;
+$naranja2: #FFAB40;
 
 
 
@@ -66,4 +67,7 @@ color: $naranja
 }
 .footerb {
 	background-color: $gris1;
+}
+.card-action-button{
+	color: $narana2;
 }
